add_library(CopyPaste CopyPaste.cpp)

# Hi <LINKEDIN_USER_FIRSTNAME>,
#
# I came across your profile while <BASIS_OF_DISCOVERY>. <WHAT_I_LIKED_ABOUT_IT>
#
# Without further wasting your time, I'd like to introduce myself. My name is
# Prav, I'm a Software Engineer, I'd love it if you took a look at my portfolio
# website - https://pravasith.com/. (I'm very proud of this website, I did the
# Design and 3D-Modelling myself :))
#
# Unfortunately, I was laid off from work 2 months ago and I've been applying to
# many many companies since then. It seems like my resume rarely ends up in the
# hiring manager's hands 😞.
#
# So I decided to shamelessly reach out to employees like you asking for an
# internal referral. I've applied to this job posting a few minutes ago. -
# <JOB_PAGE_LINK> But I'd really really appreciate it if you would be willing to
# refer me internally (if you feel like I'd be a good fit). If you choose not
# to, then it's completely okay, and I'd love to connect with you on LinkedIn
# :).
#
# I think I'm a good engineer, I'm good at Data-Structures/Algorithms, Design
# patterns and I've hands-on experience with almost all of the technologies
# mentioned in the JD except <NO_EXP_TECH> (not directly at least) but I do have
# good experience with <SIMILAR_TECH>.
#
# I hope you have a great week ahead, and if you have questions about me or just
# want to say hi, please feel free to drop me an email - pravasith@gmail.com or
# a DM on twitter - https://twitter.com/pravasith/.
#
# Thanks so much in advance!
#
# Prav Chinthoju.
#
